--- a/sass/index.css
+++ b/sass/index.css
@@ -154,8 +154,14 @@ a {
   background-color: #202c36;
 }
 .dark .counrtyModal {
-  background-color: #111517;
+  background-color: #202c36;
   color: #fff !important;
+}
+.dark .counrtyModal .back {
+  background-color: #202c36;
+}
+.dark .counrtyModal .back svg path {
+  fill: #fff;
 }
 
 .counrtyModal {
@@ -188,15 +194,18 @@ a {
   align-items: center;
   height: 100%;
   width: 100%;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
 }
 .counrtyModal .modal .leftModal {
   width: 50%;
 }
 .counrtyModal .modal .leftModal img {
   width: 100%;
-  height: 100%;
+  height: 80%;
   -o-object-fit: cover;
      object-fit: cover;
+  max-height: 400px;
 }
 .counrtyModal .modal .rightModal {
   width: 50%;
@@ -209,7 +218,8 @@ a {
 }
 .counrtyModal .modal .rightModal .moldalInfo {
   display: flex;
-  justify-content: space-between;
+  -moz-column-gap: 30%;
+       column-gap: 30%;
   align-items: center;
   flex-wrap: wrap;
 }
